--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </body>
 <li>
     <a href="https://github.com/mknajeeb/PCDE-Activity-9.1">
-    Project Title
+    PCDE-Activity-9.1
   </a>
 </li>
 
